--- a/package.json
+++ b/package.json
@@ -12,14 +12,31 @@
     "@tailwindcss/forms": "^0.4.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^9.1.0",
+    "autoprefixer": "^10.4.0",
+    "chai": "^4.2.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "autoprefixer": "^10.4.0",
-    "chai": "^4.3.4",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.8.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "prettier": "^2.7.1",
+    "solidity-coverage": "^0.7.21",
+    "tailwindcss": "^3.0.7",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
   }
 }
